2019-04-15  John Wilander  <wilander@apple.com>

        Send delayed Ad Click Attribution conversion requests to the click source
        https://bugs.webkit.org/show_bug.cgi?id=196838
        <rdar://problem/47650157>

        Reviewed by Chris Dumez and Youenn Fablet.

        * http/tests/adClickAttribution/attribution-conversion-through-image-redirect-with-priority-expected.txt:
        * http/tests/adClickAttribution/attribution-conversion-through-image-redirect-without-priority-expected.txt:
        * http/tests/adClickAttribution/resources/conversionFilePath.php: Added.
        * http/tests/adClickAttribution/resources/conversionReport.php: Added.
        * http/tests/adClickAttribution/resources/getConversionData.php: Added.
        * http/tests/adClickAttribution/send-attribution-conversion-request-expected.txt: Added.
        * http/tests/adClickAttribution/send-attribution-conversion-request.html: Added.

2019-04-15  Devin Rousso  <drousso@apple.com>

        REGRESSION (r240644): Layout Test inspector/page/overrideSetting-ICECandidateFilteringEnabled.html is a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=194437
        <rdar://problem/48008005>

        Reviewed by Joseph Pecoraro.

        * inspector/page/overrideSetting-ICECandidateFilteringEnabled.html:
        * inspector/page/overrideSetting-ICECandidateFilteringEnabled-expected.txt:

2019-04-15  Said Abou-Hallawa  <said@apple.com>

        ASSERT fires when removing a disallowed clone from the shadow tree without reseting its corresponding element
        https://bugs.webkit.org/show_bug.cgi?id=196895

        Reviewed by Darin Adler.

        * svg/custom/use-disallowed-element-clear-corresponding-element-expected.txt: Added.
        * svg/custom/use-disallowed-element-clear-corresponding-element.html: Added.

2019-04-15  Devin Rousso  <drousso@apple.com>
