@@ -1,5 +1,16 @@
 2019-04-15  Joseph Pecoraro  <pecoraro@apple.com>
 
+        Web Inspector: SameSite parsing should be stricter
+        https://bugs.webkit.org/show_bug.cgi?id=196927
+        <rdar://problem/42291601>
+
+        Reviewed by Devin Rousso.
+
+        * UserInterface/Models/Cookie.js:
+        (WI.Cookie.parseSameSiteAttributeValue):
+
+2019-04-15  Joseph Pecoraro  <pecoraro@apple.com>
+
         Web Inspector: CPU Usage Timeline - Energy impact popover flickers
         https://bugs.webkit.org/show_bug.cgi?id=196931
         <rdar://problem/49569122>
